--- a/pom.xml
+++ b/pom.xml
@@ -118,10 +118,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <!--引入undertow-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
