--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@
     </dependencies>
 
     <build>
+        <finalName>library</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
