--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/library?serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/library?serverTimezone=GMT%2B8
   servlet:
     multipart:
       max-file-size: 10MB
